Fixed alignment

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -22,3 +22,9 @@ h1 {
   margin: 0px;
   font-weight: bold;
 }
+
+
+.con-3 {
+  background-color: yellow;
+  text-align: inherit;
+}
